scss/_moduleviews.scss
.module-view-content {
  .error-message {
    font-size: 4.5vh;
    .emoji {
      height: 10vh;
      display: block;
      margin-top: 20px;
      margin-left: auto;
      margin-right: auto;
    }
  }
  .chapel-events {
    .chapel-events-list {
      background-color: color(light-gray);
      .event-title {
        font-size: 1.1em;
        white-space: normal;
      }
      .event-date {
        color: color(muted-gray);
        padding-top: 0.25em;
        font-size: 0.9em;
      }
    }
  }
  .highland-express {
    .highland-controls {
      margin-top: 5px;
      margin-bottom: 5px;
      color: color(white);
      text-align: center;
      .highland-schedule-day {
        display: inline-block;
        margin: 0 20px;
        text-transform: capitalize;
      }
      .schedule-button {
        background-color: transparent;
        border-radius: 4px;
        text-align: center;
        border: 1px solid color(mid-gray);
        padding: 0 10px;
        white-space: nowrap;
        box-sizing: border-box;
        &.icon-small:before {
          color: color(white);
        }
        .schedule-button:active {
          border-color: color(muted-gray);
          &.icon-small:before {
            color: color(muted-gray);
          }
        }
      }
    }
    .highland-announcement {
      padding-top: 10px;
      padding-left: 10px;
      background-color: color(mid-gray);
      padding-bottom: 5px;
      color: color(black);
      h3 {
        color: color(dark-green);
        margin-bottom: 5px;
      }
    }
    .highland-schedule {
      background-color: color(light-gray);
      .row {
        margin: -1px;
        padding-left: 10px;
        padding-right: 10px;
        border-bottom: 1px solid color(mid-gray);
        &.highland-destinations {
          border-width: 2px;
        }
        .col {
          text-align: center;
        }
      }
    }
  }
  .athletics-schedule {
    .athletics-schedule-list {
      background-color: color(light-gray);
      .event-title {
        font-size: 1.1em;
        white-space: normal;
      }
      .event-details {
        color: color(muted-gray);
        padding-top: 0.25em;
        font-size: 0.9em;
      }
    }
  }
}

